...
        android:focusable="true"
        app:layout_constraintLeft_toLeftOf="@+id/checkbox_hyperspace"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_hyperspace"
        app:srcCompat="@drawable/partly_cloudy" />

    <TextView
        android:id="@+id/text_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message"
        android:labelFor="@id/edittext_message"
        app:layout_constraintTop_toBottomOf="@+id/image_partly_cloudy"
        app:layout_constraintLeft_toLeftOf="@+id/image_partly_cloudy"/>
...
